# conan-blackmagic

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  conanfile.py
test_package/: conanfile.py  test_package.cc
